corrected backdrop behavior to display full page, modal now fixed and scrollable, content behind component no longer disappears

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -5,6 +5,11 @@
   margin: auto;
 }
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   text-align: center;
   width: 100%;
